# quanta

./: .gitignore  CMakeLists.txt  README.md  tag.sh
docs/: compiler.md  grammar.md  spec.md  stdlib.md
examples/: bell.qnta  class.quanta  golden.qnta  golden.quanta  multi_char_literal.qnta  quantum_rng.qt  test.qnta  var_not_in_scope.qnta
src/: main.cpp
src/SemanticAnalysis/: SemanticAnalyser.cpp  SemanticAnalyser.hpp
src/analysis/: semantic.cpp  semantic.hpp  semantic_analyser.cpp  semantic_analyser.hpp
src/ast/: ASTPrinter.cpp  ASTPrinter.hpp  accept.cpp  ast.hpp  ast_printer.cpp
src/codegen/: ClassicalCodeGenerator.cpp  ClassicalCodeGenerator.hpp  CodeGenerator.hpp  QuantumCodeGenerator.cpp  QuantumCodeGenerator.hpp  cppgen.cpp  cppgen.hpp  driver.cpp  driver.hpp  oqasmgen.cpp  oqasmgen.hpp  visitor.hpp  visitor_base.hpp
src/lexer/: TokenType.hpp  lexer.cpp  lexer.hpp  token.hpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp
src/parser/: parser.cpp  parser.hpp
stdlib/quanta/core/: Math.qt
test/: test_runner.cpp
test/invalid/: assign_to_function.qt  invalid_annotation.qt  invalid_measure_argument.qt  missing_return.qt  redeclare_final.qt  static_methods_call.qt  type_mismatch.qt  undeclared_variable.qt  wrong_state.fail.qt
test/valid/: class_instantiation.qt  golden.qt  quantum_pass.qt
